--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   font-family: arial;
 }
 
-card:hover {
+.breweryCard:hover {
   opacity: 0.7;
 }
 
@@ -46,12 +46,10 @@ form button {
   background: white;
   cursor: pointer;
 }
-
-#state-search {
-    width:300px;
-    height: 32px;
-    border-radius: 3px;
-    border: 1px solid #eaeaea;
-    padding: 5px 10px;
-    font-size: 12px;
+form select {
+  font-size: medium;
+  padding: 0.5rem;
+  color: maroon;
+  background: white;
+  cursor: pointer;
 }
