updated background for container 1, changed fonts and colors, borders

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .breweryCard {
-  border: darkolivegreen;
+  border: darkolivegree#492a2d;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
   margin: auto;
@@ -12,10 +12,11 @@
 }
 
 body {
-  background-color: darkgoldenrod;
-  color: maroon;
+  background-color: #fdfbd1;
+  color: #492a2d;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   min-height: auto;
+  margin:0;
 }
 
 h1 {
@@ -23,6 +24,8 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  color:#fdfbd1;
+
 }
 
 form {
@@ -32,24 +35,27 @@ form {
   align-items: center;
   padding: 0.5rem;
   font-size: medium;
-  border: maroon;
+  border-color: #492a2d;
 }
 form input {
   padding: 0.5rem;
   font-size: medium;
-  border-color: maroon;
+  border-color:   #492a2d;
+
 }
 form button {
   font-size: medium;
   padding: 0.5rem;
-  color: maroon;
+ color: #492a2d;
+
   background: white;
   cursor: pointer;
 }
 form select {
   font-size: medium;
   padding: 0.5rem;
-  color: maroon;
+ color: #492a2d;
+
   background: white;
   cursor: pointer;
 }
