--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 .breweryCard {
-  border: darkolivegreen;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 300px;
+  width: 100%;
   margin: auto;
   text-align: center;
   font-family: arial;
+  min-height: 30vh;
+  padding-top: 1rem;
 }
 
 .breweryCard:hover {
@@ -16,6 +17,19 @@ body {
   color: maroon;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   min-height: auto;
+  margin: 0;
+}
+.container {
+  margin: 0;
+  width: 100vw;
+}
+
+#container2 {
+  width: 100vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1rem;
+  margin: 0;
 }
 
 h1 {
@@ -52,4 +66,7 @@ form select {
   color: maroon;
   background: white;
   cursor: pointer;
+}
+#container2 {
+  background-color: grey;
 }
