addition of weather api, slight changes to index and addition of some styling

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1 {
   align-items: center;
 }
 
-form {
+.form {
   min-height: 20vh;
   display: flex;
   justify-content: center;
@@ -34,22 +34,24 @@ form {
   font-size: medium;
   border: maroon;
 }
-form input {
+.form input {
   padding: 0.5rem;
   font-size: medium;
   border-color: maroon;
+  margin-right: 1rem;
 }
-form button {
+.form button {
   font-size: medium;
   padding: 0.5rem;
   color: maroon;
   background: white;
   cursor: pointer;
+  margin-right: 1rem;
 }
-form select {
-  font-size: medium;
+.form select {
+  height: 44px;
   padding: 0.5rem;
-  color: maroon;
+  font-size: medium;
+  border-color: maroon;
   background: white;
-  cursor: pointer;
 }
