--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
 }
 
 h1 {
+  margin: 0;
   min-height: 20vh;
   display: flex;
   justify-content: center;
@@ -56,16 +57,17 @@ h1 {
 .form input {
   padding: 0.5rem;
   font-size: medium;
-  border-color:   #492a2d;
+  border-color: #492a2d;
+  background: #fdfbd1;
   margin-right: 1rem;
 }
 
 .form button {
+  height: 44px;
   font-size: medium;
   padding: 0.5rem;
- color: #492a2d;
-
-  background: white;
+  color: #492a2d;
+  background: #fdfbd1;
   cursor: pointer;
   margin-right: 1rem;
 }
@@ -76,10 +78,10 @@ h1 {
   color: #492a2d;
   font-size: medium;
   border-color: maroon;
-  background: white;
+  background: #fdfbd1;
   cursor: pointer;
 }
 
 #container2 {
-  background-color: grey;
+  background-color: #fdfbd1;
 }
