--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ h1 {
   padding: 0.5rem;
   color: #492a2d;
   background: #fdfbd1;
+  border-color: #492a2d;
   cursor: pointer;
   margin-right: 1rem;
 }
@@ -83,7 +84,21 @@ h1 {
   padding: 0.5rem;
   color: #492a2d;
   font-size: medium;
-  border-color: maroon;
+  border-color: #492a2d;
   background: #fdfbd1;
   cursor: pointer;
+}
+footer{
+  position: fixed;
+  left: auto;
+  bottom: 0px;
+  right: auto;
+  background-color: #492a2d;
+  color: #fdfbd1;
+  height: 30px;
+  font-size: 2vh;
+  text-align: center;
+  text-size-adjust: auto;
+  width: 100%;
+  margin-top: auto;
 }
