--- a/style.css
+++ b/style.css
@@ -1,19 +1,3 @@
-
-.breweryCard {
-  border: darkolivegree#492a2d;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  width: 100%;
-  margin: auto;
-  text-align: center;
-  font-family: rockwell;
-  min-height: 30vh;
-  padding-top: 1rem;
-}
-
-.breweryCard:hover {
-  opacity: 0.7;
-}
-
 body {
   background-color: #fdfbd1;
   color: #492a2d;
@@ -26,24 +10,11 @@ body {
 .container {
   margin: 0;
   width: 100vw;
-  max-width: 1800px;
-}
-
-#card-container {
-  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-  -moz-box-sizing: border-box; /* Firefox */
-  box-sizing: border-box;
-  width: 100vw;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 1rem;
-  margin: 0;
-  background-color: #fdfbd1;
 }
 
 h1 {
   margin: 0;
-  font-size: 120px;
+  font-size: 12vw;
   min-height: 30vh;
   display: flex;
   justify-content: center;
@@ -55,7 +26,7 @@ h1 {
 
 h2 {
   margin: 0;
-  font-size: 35px;
+  font-size: 6vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -104,120 +75,13 @@ h2 {
   cursor: pointer;
 }
 
-/* Even smaller Smartphones (phones) ----------- */
-@media only screen and (min-device-width: 250px) and (max-device-width: 600px) {
-}
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 563px) {
-}
-/* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-}
-
-/* Smartphones (landscape) ----------- */
-@media only screen and (min-width: 321px) {
-}
-
-/* Smartphones (portrait) ----------- */
-@media only screen and (max-width: 320px) {
-}
-
-/* iPads (portrait and landscape) ----------- */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
-}
-
-/* iPads (landscape) ----------- */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
-}
-
-/* iPads (portrait) ----------- */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-}
-/**********
-  iPad 3
-  **********/
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
-}
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
-}
-/* Desktops and laptops ----------- */
-@media only screen and (min-width: 1224px) {
-}
-
-/* Large screens ----------- */
-@media only screen and (min-width: 1824px) {
-}
-
-/* iPhone 4 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
-}
-
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
-}
-
-/* iPhone 5 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) {
-}
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) {
-}
-
-/* iPhone 6, 7, 8 ----------- */
-@media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) {
-}
-
-@media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) {
-}
-
-/* iPhone 6+, 7+, 8+ ----------- */
-@media only screen and (min-device-width: 414px) and (max-device-height: 736px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) {
-}
-
-@media only screen and (min-device-width: 414px) and (max-device-height: 736px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) {
-}
-
-/* iPhone X ----------- */
-@media only screen and (min-device-width: 375px) and (max-device-height: 812px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 3) {
-}
-
-@media only screen and (min-device-width: 375px) and (max-device-height: 812px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3) {
-}
-
-/* iPhone XS Max, XR ----------- */
-@media only screen and (min-device-width: 414px) and (max-device-height: 896px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 3) {
-}
-
-@media only screen and (min-device-width: 414px) and (max-device-height: 896px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3) {
-}
-
-/* Samsung Galaxy S3 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) {
-}
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) {
-}
-
-/* Samsung Galaxy S4 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 3) {
-}
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3) {
-}
-
-/* Samsung Galaxy S5 ----------- */
-@media only screen and (min-device-width: 360px) and (max-device-height: 640px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 3) {
-}
-
-@media only screen and (min-device-width: 360px) and (max-device-height: 640px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3) {
-
 #card-container {
   display: grid;
   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
   -moz-box-sizing: border-box;    /* Firefox */
   box-sizing: border-box;
   width: 100vw;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 1rem;
   margin: 0;
   background-color: #fdfbd1;
@@ -226,6 +90,12 @@ h2 {
 
 #search-text {
   text-align: center;
+  margin: 2rem 0 0;
+}
+
+#card-container a {
+  color: #492a2d;
+  text-decoration: none;
 }
 
 .breweryCard {
@@ -233,27 +103,88 @@ h2 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 100%;
   margin: auto;
-  text-align: center;
+  text-align: left;
   font-family: arial;
-  min-height: 30vh;
+  /* min-height: 30vh; */
+  height: 250px;
+}
+
+.breweryCard *:not(span){
+  padding-left: 1rem;
+}
+
+.breweryCard h3 {
   padding-top: 1rem;
+  margin-top: 0;
 }
 
 .breweryCard:hover {
   opacity: 0.7;
 }
 
-footer{
+footer {
   position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   left: auto;
   bottom: 0px;
   right: auto;
   background-color: #492a2d;
   color: #fdfbd1;
   height: 30px;
-  font-size: 2vh;
+  font-size: 1rem;
   text-align: center;
-  text-size-adjust: auto;
   width: 100%;
-  margin-top: auto;
+}
+
+footer a {
+  color: #fdfbd1;
+  margin-left: .5rem;
+}
+
+@media screen and (max-width: 1024px) {
+  #card-container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  #card-container {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .form {
+    margin-top: 1rem;
+    display: grid;
+    grid-template-areas: 
+    'city city'
+    'state state'
+    'span1 span2';
+    justify-items: center;
+  }
+
+  #city-search {
+    grid-area: city;
+    margin-right: 0;
+  }
+
+  #state-search {
+    grid-area: state;
+    margin-right: 0;
+  }
+
+  .form button {
+    grid-area: span1;
+  }
+
+  .form select {
+    grid-area: span2;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #card-container {
+    grid-template-columns: 1fr;
+  }
 }
